cmake_minimum_required(VERSION 2.8.4)
include_directories(xServer third-party/lua)
project(xServer)
if(WIN32)
    set(CMAKE_C_FLAGS "-g -O2 -Wall -std=gnu99")
else()
    set(CMAKE_C_FLAGS "-g -O2 -Wall -fPIC -std=gnu99")
endif()
add_subdirectory(third-party/lua)
add_subdirectory(module)
add_subdirectory(xServer)
add_subdirectory(main)