aux_source_directory(. xServer_src)
add_library(xServer SHARED ${xServer_src})
set_target_properties(xServer PROPERTIES PREFIX "")
if (WIN32)
    target_link_libraries(xServer ws2_32)
elseif (APPLE)
    target_link_libraries(xServer c pthread)
else ()
    target_link_libraries(xServer c dl pthread)
endif ()